--- a/app/views/v5/employer/create/contact.html
+++ b/app/views/v5/employer/create/contact.html
@@ -8,11 +8,12 @@ Add contact information - Your apprenticeship adverts - {{serviceName}} - GOV.UK
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
     <h1 class="govuk-heading-xl"><span class="govuk-caption-xl">{% if data.title %}{{data.title}}{% else %}Business Administration Apprentice{% endif %}</span>
-      Add contact information for {% if data.user == "employer" %}{{data.orgName}}{% else %}{{ data.providerName}}{% endif %} (optional)
+      Contact details
     </h1>
+    <p class="govuk-body">This should be someone an applicant can contact to ask questions about the apprenticeship position.</p>
     <form method="post" class="dirty">
       <div class="govuk-form-group">
-          <label class="govuk-label" for="EmployerContactName">Contact details for ABC opticians (optional) )</label>
+          <label class="govuk-label" for="EmployerContactName">Contact details for ABC opticians (optional) </label>
           <input class="govuk-input govuk-input--width-20" maxlength="100" type="text" id="EmployerContactName" name="EmployerContactName" value="{% if data.EmployerContactName %}{{data.EmployerContactName}}{%endif%}">
       </div>
       <div class="govuk-form-group">
