Minor content updates "Create a vacancy" journey

--- a/app/views/v5/employer/create/about-employer.html
+++ b/app/views/v5/employer/create/about-employer.html
@@ -4,6 +4,16 @@
 Add some information - Your apprenticeship adverts - {{serviceName}} - GOV.UK
 {% endblock %}
 
+
+{% block beforeContent %}
+{{super()}}
+<a href="javascript:history.back()" class="govuk-back-link">Back</a>
+{% endblock %}
+
+
+
+
+
 {% block content %}
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
