--- a/app/views/v5/employer/create/training-confirm.html
+++ b/app/views/v5/employer/create/training-confirm.html
@@ -13,7 +13,6 @@ Confirm apprenticeship training - Your apprenticeship adverts - {{serviceName}} 
 {% endblock %}
 {% block content %}
 
-    <h1 class="govuk-heading-xl">Confirm apprenticeship training</h1>
 
     <!-- <span class="govuk-caption-xl">{% if data.title %}{{data.title}}{% else %}Business Administration Apprentice{% endif %} vacancy</span>
     <h1 class="govuk-heading-xl">
@@ -21,6 +20,8 @@ Confirm apprenticeship training - Your apprenticeship adverts - {{serviceName}} 
     </h1> -->
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
+
+    <h1 class="govuk-heading-xl">Confirm apprenticeship training course</h1>
     <div class="das-confirm-card" style="background-color:#f4f4f4;padding:20px;margin-bottom:30px;">
     <h2 class="govuk-heading-m">{%if data.training_level %}{{data.training_level}}{% else %}Accountancy Taxation Professional{%endif%}<span class="govuk-caption-m">
       Level: 3 advanced (equivalent to A levels)
