--- a/app/views/v5/employer/create/application-process.html
+++ b/app/views/v5/employer/create/application-process.html
@@ -4,6 +4,13 @@
 How would you like to receive applications? - Your apprenticeship adverts - {{serviceName}} - GOV.UK
 {% endblock %}
 
+{% block beforeContent %}
+{{super()}}
+<a href="javascript:history.back()" class="govuk-back-link">Back</a>
+{% endblock %}
+
+
+
 {% block content %}
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
