--- a/app/views/v5/employer/create/display-name.html
+++ b/app/views/v5/employer/create/display-name.html
@@ -4,6 +4,13 @@
 What employer name do you want on your advert? - Your apprenticeship adverts - {{serviceName}} - GOV.UK
 {% endblock %}
 
+{% block beforeContent %}
+{{super()}}
+<a href="javascript:history.back()" class="govuk-back-link">Back</a>
+{% endblock %}
+
+
+
 {% block content %}
 
 <div class="govuk-grid-row">
