--- a/app/views/v5/employer/create/duration.html
+++ b/app/views/v5/employer/create/duration.html
@@ -4,6 +4,12 @@
 Duration and working hours - Your apprenticeship adverts - {{serviceName}} - GOV.UK
 {% endblock %}
 
+
+{% block beforeContent %}
+{{super()}}
+<a href="javascript:history.back()" class="govuk-back-link">Back</a>
+{% endblock %}
+
 {% block content %}
 
 <div class="govuk-grid-row">
