--- a/app/views/v5/employer/create/employers-select.html
+++ b/app/views/v5/employer/create/employers-select.html
@@ -4,6 +4,12 @@
 Which organisation is this advert for? - Your apprenticeship adverts - {{serviceName}} - GOV.UK
 {% endblock %}
 
+{% block beforeContent %}
+{{super()}}
+<a href="javascript:history.back()" class="govuk-back-link">Back</a>
+{% endblock %}
+
+
 {% block content %}
 
 <div class="govuk-grid-row">
