--- a/app/views/v5/employer/create/qualifications-list.html
+++ b/app/views/v5/employer/create/qualifications-list.html
@@ -4,6 +4,12 @@
 Qualifications - Your apprenticeship advert - {{serviceName}} - GOV.UK
 {% endblock %}
 
+{% block beforeContent %}
+{{super()}}
+<a href="javascript:history.back()" class="govuk-back-link">Back</a>
+{% endblock %}
+
+
 {% block content %}
 
     <div class="govuk-grid-row">
