--- a/app/views/v5/employer/create/skills.html
+++ b/app/views/v5/employer/create/skills.html
@@ -4,6 +4,13 @@
 What skills and personal qualities does the applicants need to have? - Your apprenticeship advert - {{serviceName}} - GOV.UK
 {% endblock %}
 
+{% block beforeContent %}
+{{super()}}
+<a href="javascript:history.back()" class="govuk-back-link">Back</a>
+{% endblock %}
+
+
+
 {% block content %}
 
  
@@ -16,7 +23,7 @@ What skills and personal qualities does the applicants need to have? - Your appr
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
         <span class="govuk-caption-xl">{% if data.title %}{{data.title}}{% else %}Business Administration Apprentice{% endif %}</span>
-        <h1 class="govuk-heading-xl">What skills and personal qualities do applicants need to have? </h1>
+        <h1 class="govuk-heading-xl">What skills and personal qualities do applicants need to have?</h1>
         <form method="post" action="skills">
           <legend class="govuk-fieldset__legend govuk-fieldset__legend--s" id="SkillsHeading"></legend>
          
