--- a/app/views/v5/employer/create/training-select.html
+++ b/app/views/v5/employer/create/training-select.html
@@ -32,7 +32,7 @@ What training will the apprentice take? - Your apprenticeship adverts - {{servic
               <div class="search-input ">
                 <label class="govuk-label" for="contact-by-email">
                   <span class="govuk-hint">
-                    Enter apprenticeship training course
+                    Enter apprenticeship training course title
                   </span>
                 </label>
                 <div class="autocomplete__parent_wrapper govuk-!-margin-bottom-2">
