--- a/app/views/v5/employer/create/short-description.html
+++ b/app/views/v5/employer/create/short-description.html
@@ -6,8 +6,9 @@ Short description of the apprenticeship - Your apprenticeship adverts - {{servic
 
 {% block beforeContent %}
 {{super()}}
-<!--<a href="javascript:history.back()" class="govuk-back-link">Back</a>-->
+<a href="javascript:history.back()" class="govuk-back-link">Back</a>
 {% endblock %}
+
 
 {% block content %}
 
