--- a/app/views/v6/_summary.html
+++ b/app/views/v6/_summary.html
@@ -36,9 +36,10 @@
         <li><a href="https://lucid.app/lucidspark/75df8cd3-1247-466f-b7c6-7980cf119bf5/edit?existing=1&docId=75df8cd3-1247-466f-b7c6-7980cf119bf5&shared=true&invitationId=inv_295930d0-a2eb-4b25-a72a-e25f0aea5c39#" class="govuk-link govuk-link--no-visited-state">Lucid board</a></li>
 
         <h4 class="govuk-heading-s govuk-!-margin-top-4" style="margin-bottom:10px;">Copy docs</h4>
-        <li><a href="https://docs.google.com/document/d/192EWJbWDH5Oi4R2Swbv9Q5qiXUXFbQ98vNKDGflkruA/edit">Copy doc: how would you like to receive applications?</a></li>
-        <li><a href="https://docs.google.com/document/d/1z-IQzJXBKG4Yc9QDClyyrW0dkp26ZgnA2NUyhhSiT7s/edit" class="govuk-link govuk-link--no-visited-state">Copy doc: check your answers page</a></li>
-        <li><a href="https://docs.google.com/document/d/1XjKuKG1G7QYp0ddgQ-J2SeRN8pL-OU0pdWYKSugWCTE/edit" class="govuk-link govuk-link--no-visited-state">Copy doc: preview of ad</a></li>
+        <li><a href="https://docs.google.com/document/d/192EWJbWDH5Oi4R2Swbv9Q5qiXUXFbQ98vNKDGflkruA/edit">How would you like to receive applications?</a></li>
+        <li><a href="https://docs.google.com/document/d/1z-IQzJXBKG4Yc9QDClyyrW0dkp26ZgnA2NUyhhSiT7s/edit" class="govuk-link govuk-link--no-visited-state">Check your answers page</a></li>
+        <li><a href="https://docs.google.com/document/d/1XjKuKG1G7QYp0ddgQ-J2SeRN8pL-OU0pdWYKSugWCTE/edit" class="govuk-link govuk-link--no-visited-state">Preview of ad</a></li>
+        <li><a href="https://docs.google.com/document/d/16IqXENo404ykeolWRLyZNImmQSMP3m5D49ZVXXpdTOY/edit" class="govuk-link govuk-link--no-visited-state">Create an advert</a></li>
 
         <h4 class="govuk-heading-s govuk-!-margin-top-4" style="margin-bottom:10px;">Employer service links</h4>                                                
         <li><a href="v6/employer/login" class="govuk-link govuk-link--no-visited-state">Create an advert</a></li>
