--- a/app/views/v6/employer/create/start-page.html
+++ b/app/views/v6/employer/create/start-page.html
@@ -16,27 +16,18 @@ Create an advert - Your apprenticeship adverts - {{serviceName}} - GOV.UK
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
         <h1 class="govuk-heading-xl">Create an advert</h1>
-        <p class="govuk-body-l">Recruit an apprentice by creating an advert to post on <a href="#" class="govuk-link govuk-link--no-visited-state">Find an apprenticeship (opens in a new tab or window)</a>.</p>
+        <p class="govuk-body-l">Recruit an apprentice by creating an advert to post on <a href="#" class="govuk-link govuk-link--no-visited-state">Find an apprenticeship (opens in a new tab)</a>.</p>
         
         <h2 class="govuk-heading-m">Before you start</h2>
-        <p class="govuk-body">Before you create an advert, you must:</p>
+        <p class="govuk-body">Before you create an advert, you’ll need to know:</p>
         <ul class="govuk-list govuk-list--bullet">
-            <li>choose appropriate apprenticeship training</li>        
-            <li>get some information from your training provider - if you d o not have a training provider yet, you can <a href="#" class="govuk-link govuk-link--no-visited-state">find a provider (opens in a new tab or window)</a></li>
+          <li>the name of the apprenticeship training course</li>
+          <li>the name of the training provider - if you don’t have a training provider yet, you can <a href="#" class="govuk-link govuk-link--no-visited-state">find a provider (opens in a new tab)</a></li>
+          <li>the duration of the apprenticeship</li>
+          <li>the number of hours spent working and training</li>
+          <li>how much your apprentice will be paid</li>
         </ul>
 
-        <h2 class="govuk-heading-m">When you'll need</h2>
-        <p class="govuk-body">You'll need the following:</p>
-        <ul class="govuk-list govuk-list--bullet">
-            <li>the name of the apprenticeship training and training provider</li> 
-            <li>the duration of the apprenticeship</li>
-            <li>the amount of hours spent working and training</li>
-            <li>the amount you'd like to pay your apprentice</li>
-        </ul>
-
-        <div class="govuk-inset-text">
-          It should take no longer than 30 minutes to create your first advert.
-        </div>
 
       {% set _forwardLink = "task-list" %}
 
