Updated the prototype index page to make prototype journeys easier to fine

--- a/app/views/v6/_summary.html
+++ b/app/views/v6/_summary.html
@@ -25,28 +25,43 @@
         </tbody>
       </table>"
     }) }}    
-    <ul class="govuk-list govuk-list--bullet">
-      <h3 class="govuk-heading-m">EPIC: Create vacancy for employers and providers</h3>
-      <ul class="govuk-list govuk-list--bullet">  
-        <h4 class="govuk-heading-s govuk-!-margin-top-4" style="margin-bottom:10px;">Design tickets (in Trello)</h4> 
-        <li><a href="https://trello.com/c/trM5yrcs" class="govuk-link govuk-link--no-visited-state">#162 RAAv2 improve guidance where they recruit from an external site</a></li>  
-        <li><a href="https://trello.com/c/b8U6Fwnp" class="govuk-link govuk-link--no-visited-state">#152 RAA advert/vacancy preview page</a></li>  
 
-        <h4 class="govuk-heading-s govuk-!-margin-top-4" style="margin-bottom:10px;">Design artefacts</h4>                            
-        <li><a href="https://lucid.app/lucidspark/75df8cd3-1247-466f-b7c6-7980cf119bf5/edit?existing=1&docId=75df8cd3-1247-466f-b7c6-7980cf119bf5&shared=true&invitationId=inv_295930d0-a2eb-4b25-a72a-e25f0aea5c39#" class="govuk-link govuk-link--no-visited-state">Lucid board</a></li>
-
-        <h4 class="govuk-heading-s govuk-!-margin-top-4" style="margin-bottom:10px;">Copy docs</h4>
-        <li><a href="https://docs.google.com/document/d/192EWJbWDH5Oi4R2Swbv9Q5qiXUXFbQ98vNKDGflkruA/edit">How would you like to receive applications?</a></li>
-        <li><a href="https://docs.google.com/document/d/1z-IQzJXBKG4Yc9QDClyyrW0dkp26ZgnA2NUyhhSiT7s/edit" class="govuk-link govuk-link--no-visited-state">Check your answers page</a></li>
-        <li><a href="https://docs.google.com/document/d/1XjKuKG1G7QYp0ddgQ-J2SeRN8pL-OU0pdWYKSugWCTE/edit" class="govuk-link govuk-link--no-visited-state">Preview of ad</a></li>
-        <li><a href="https://docs.google.com/document/d/16IqXENo404ykeolWRLyZNImmQSMP3m5D49ZVXXpdTOY/edit" class="govuk-link govuk-link--no-visited-state">Create an advert</a></li>
-
-        <h4 class="govuk-heading-s govuk-!-margin-top-4" style="margin-bottom:10px;">Employer service links</h4>                                                
-        <li><a href="v6/employer/login" class="govuk-link govuk-link--no-visited-state">Create an advert</a></li>
-        <li><a href="v6/employer/login?startpage=1" class="govuk-link govuk-link--no-visited-state">Create an advert - first time user (with Start page)</a></li>        
-        <h4 class="govuk-heading-s govuk-!-margin-top-4" style="margin-bottom:10px;">Provider service links</h4>                                                
-        <li><a href="v6/provider/login" class="govuk-link govuk-link--no-visited-state">Create a vacancy</a></li>
-      </ul>
+    <h3 class="govuk-heading-m">EPIC: Create vacancy for employers and providers</h3>
+     
+    <h4 class="govuk-heading-s govuk-!-margin-bottom-2">Design tickets (in Trello)</h4> 
+    <ul class="govuk-list govuk-list--bullet"> 
+      <li><a href="https://trello.com/c/trM5yrcs" class="govuk-link govuk-link--no-visited-state">#162 RAAv2 improve guidance where they recruit from an external site</a></li>  
+      <li><a href="https://trello.com/c/b8U6Fwnp" class="govuk-link govuk-link--no-visited-state">#152 RAA advert/vacancy preview page</a></li>  
     </ul>
+
+    <h4 class="govuk-heading-s govuk-!-margin-bottom-2">Design artefacts</h4>  
+    <ul class="govuk-list govuk-list--bullet">                           
+      <li><a href="https://lucid.app/lucidspark/75df8cd3-1247-466f-b7c6-7980cf119bf5/edit?existing=1&docId=75df8cd3-1247-466f-b7c6-7980cf119bf5&shared=true&invitationId=inv_295930d0-a2eb-4b25-a72a-e25f0aea5c39#" class="govuk-link govuk-link--no-visited-state">Lucid board</a></li>
+    </ul>
+
+    <h4 class="govuk-heading-s govuk-!-margin-bottom-2">Copy docs</h4>
+    <ul class="govuk-list govuk-list--bullet"> 
+      <li><a href="https://docs.google.com/document/d/192EWJbWDH5Oi4R2Swbv9Q5qiXUXFbQ98vNKDGflkruA/edit">How would you like to receive applications?</a></li>
+      <li><a href="https://docs.google.com/document/d/1z-IQzJXBKG4Yc9QDClyyrW0dkp26ZgnA2NUyhhSiT7s/edit" class="govuk-link govuk-link--no-visited-state">Check your answers page</a></li>
+      <li><a href="https://docs.google.com/document/d/1XjKuKG1G7QYp0ddgQ-J2SeRN8pL-OU0pdWYKSugWCTE/edit" class="govuk-link govuk-link--no-visited-state">Preview of ad</a></li>
+      <li><a href="https://docs.google.com/document/d/16IqXENo404ykeolWRLyZNImmQSMP3m5D49ZVXXpdTOY/edit" class="govuk-link govuk-link--no-visited-state">Create an advert</a></li>
+    </ul>
+
+      <h4 class="govuk-heading-s govuk-!-margin-bottom-2">Employer service links</h4>                                              
+      <div class="govuk-button-group">
+        <a href="v6/employer/login" class="govuk-button" style="background: #6F72AF" data-module="govuk-button">
+          Create an advert
+        </a>
+
+        <a href="v6/employer/login?startpage=1" class="govuk-button" style="background: #6F72AF" data-module="govuk-button">
+          Create an advert (first time user)
+        </a>
+      </div>
+
+      <h4 class="govuk-heading-s govuk-!-margin-bottom-2">Provider service links</h4>
+
+      <a href="v6/provider/login" class="govuk-button" style="background:#F47737" data-module="govuk-button">
+        Create a vacancy
+      </a> 
   </div>
 </div>
