Added the start page to the existing user journey and tweaked the prototype index page

--- a/app/views/v6/_summary.html
+++ b/app/views/v6/_summary.html
@@ -47,18 +47,18 @@
       <li><a href="https://docs.google.com/document/d/16IqXENo404ykeolWRLyZNImmQSMP3m5D49ZVXXpdTOY/edit" class="govuk-link govuk-link--no-visited-state">Create an advert</a></li>
     </ul>
 
-      <h4 class="govuk-heading-s govuk-!-margin-bottom-2">Employer service links</h4>                                              
+      <h4 class="govuk-heading-s govuk-!-margin-bottom-2">Employer prototype</h4>                                              
       <div class="govuk-button-group">
         <a href="v6/employer/login" class="govuk-button" style="background: #6F72AF" data-module="govuk-button">
           Create an advert
         </a>
 
         <a href="v6/employer/login?startpage=1" class="govuk-button" style="background: #6F72AF" data-module="govuk-button">
-          Create an advert (first time user)
+          Create an advert (new user)
         </a>
       </div>
 
-      <h4 class="govuk-heading-s govuk-!-margin-bottom-2">Provider service links</h4>
+      <h4 class="govuk-heading-s govuk-!-margin-bottom-2">Provider prototype</h4>
 
       <a href="v6/provider/login" class="govuk-button" style="background:#F47737" data-module="govuk-button">
         Create a vacancy
