--- a/app/views/v6/employer/dashboard.html
+++ b/app/views/v6/employer/dashboard.html
@@ -19,7 +19,7 @@ Your apprentice adverts - Manage apprenticeships - GOV.UK
       </div>
       <div class="govuk-grid-column-one-third" style="text-align: right;">
         <!--<a href="create/create-vacancy" class="govuk-button" data-module="govuk-button">Create an advert</a>-->
-        <a href="create/task-list" class="govuk-button" data-module="govuk-button">Create an advert</a>
+        <a href="create/start-page" class="govuk-button" data-module="govuk-button">Create an advert</a>
       </div>
       </div>
       <div class="govuk-grid-row govuk-!-margin-bottom-6">
