Moved 'name of organisation' to the second question

--- a/app/views/v6/employer/create/employers-select.html
+++ b/app/views/v6/employer/create/employers-select.html
@@ -33,7 +33,7 @@ Which organisation is this advert for? - Your apprenticeship adverts - {{service
     <h1 class="govuk-heading-xl">Which organisation is this advert for?</h1>
 
     <!--<form method="post" id="employers-form" action="create-vacancy">-->
-    <form method="post" id="employers-form" action="display-name">
+    <form method="post" id="employers-form">
       {% if data.employerAmount > 10 %}
       <fieldset class="govuk-fieldset">
         <legend class="govuk-visually-hidden">Search your employers</legend>
