Updated guidance copy

--- a/app/views/v3/guidance/get-started.html
+++ b/app/views/v3/guidance/get-started.html
@@ -20,12 +20,14 @@ Get started - Apprenticeship services - GOV.UK
     <p class="govuk-body">
       <a href="recruitment-api-documentation" class="govuk-link govuk-link--no-visited-state">Recruitment API</a>
       <br>
-      <span class="govuk-caption">Use this product to create and submit adverts.</span>
+      <span class="govuk-caption">Create an advert on Find an apprenticeship using your existing systems.</span>
       <br><br>
       <a href="recruitment-api-sandbox-documentation" class="govuk-link govuk-link--no-visited-state">Recruitment API sandbox</a>
+      <br>
+      <span class="govuk-caption">Create an advert on Find an apprenticeship using your existing systems.</span>
       <br><br>
       <a href="display-adverts-api-documentation" class="govuk-link govuk-link--no-visited-state">Display adverts API</a><br>
-      <span class="govuk-caption">Use this product to retrieve adverts.</span>
+      <span class="govuk-caption">Display recruitment adverts from Find an apprenticeship.</span>
       <br><br>
     </p>
     <h2 class="govuk-heading-l" id="working-together">Using our APIs if you are working with an employer or training provider</h2>
