Part 2 of page re-shuffle plus updated order of CYA

--- a/app/views/v6/employer/create/task-list.html
+++ b/app/views/v6/employer/create/task-list.html
@@ -336,7 +336,7 @@ Create an apprenticeship advert - Your apprenticeship adverts - {{serviceName}} 
           <li class="app-task-list__item">
             <span class="app-task-list__task-name">
               {% if data.section3 == "completed" %}
-              <a href="employer?return_url=task-list" aria-describedby="list-convictions-status">
+              <a href="display-name?return_url=task-list" aria-describedby="list-convictions-status">
                 Name of employer on advert 
               </a>
               {%else%}
