--- a/app/views/v6/employer/create/task-list.html
+++ b/app/views/v6/employer/create/task-list.html
@@ -10,11 +10,8 @@ Create an apprenticeship advert - Your apprenticeship adverts - {{serviceName}} 
   <div class="govuk-grid-column-one-half">
     <a href="../dashboard" class="govuk-back-link">Return to your applications</a>
   </div>
-  <div class="govuk-grid-column-one-half govuk-!-padding-top-2" style="text-align:right">
-    <a href="?section1=completed" class="govuk-link">Skip 1</a>&nbsp;
-    <a href="?section1=completed&&section2=completed" class="govuk-link">Skip 2</a>&nbsp;
-    <a href="?section1=completed&&section2=completed&&section3=completed" class="govuk-link">Skip 3</a>&nbsp;
-    <a href="?section1=completed&&section2=completed&&section3=completed&&section4=completed" class="govuk-link">Skip 4</a>
+  <div class="govuk-grid-column-one-half govuk-!-padding-top-2" style="text-align:right; opacity:0.3">
+    <a href="?section1=completed&&section2=completed&&section3=completed&&section4=completed" class="govuk-link">Skip</a>
   </div>
 </div>
 {% endblock %}
