Added multiple location journey

--- a/app/views/v6/employer/create/location-old.html
+++ b/app/views/v6/employer/create/location-old.html
@@ -1,27 +1,35 @@
-{% if data.user=='employer'%}{% extends "ma-layout.html" %}{%else%}{% extends "tp-layout.html" %}{%endif%}
+{% extends "ma-layout.html" %}
 
 {% block pageTitle %}
 Where will the apprentices work? - Your apprenticeship adverts - {{serviceName}} - GOV.UK
 {% endblock %}
 
+{% block beforeContent %}
+{{super()}}
+<a href="javascript:history.back()" class="govuk-back-link">Back</a>
+{% endblock %}
+
+
 {% block content %}
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-
-    <h1 class="govuk-heading-xl">Where {% if data.numberOfPositions > 1 %}will the 6 positions{% else %}will the apprentice{% endif %} work?</h1>
-
     <form method="post">
       <div class="govuk-form-group">
-        <fieldset class="govuk-fieldset">
-          <div class="govuk-radios govuk-radios--conditional" data-module="radios">
+        <fieldset class="govuk-fieldset" aria-describedby="contact-hint">
+          <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
+            <h1 class="govuk-fieldset__heading">
+              Where {% if data.numberOfPositions > 1 %}will the apprentices{% else %}will the apprentice{% endif %} work?
+            </h1>
+          </legend>
+          <div class="govuk-radios" data-module="govuk-radios">
             <div class="govuk-radios__item">
               <input class="govuk-radios__input" id="selected-organisation-id" name="selected-organisation-id" type="radio"
                 value="Organisation {{i}}" data-search-value="Organisation">
               <label class="govuk-label govuk-radios__label" for="selected-organisation-id">
                 Cheylesmore House, 5 Quinton Rd, Coventry CV1 2WT
               </label>
-            </div>
+            </div>            
             <div class="govuk-radios__item" data-target="business-name-vacancy-panel">
               <input class="govuk-radios__input" id="selected-organisation-id" name="selected-organisation-id" type="radio"
                 value="Organisation {{i}}" data-search-value="Organisation" data-aria-controls="other-location-conditional">
@@ -56,27 +64,11 @@ Where will the apprentices work? - Your apprenticeship adverts - {{serviceName}}
                     <input class="govuk-input govuk-input--width-10 postcode-lookup ui-autocomplete-input" maxlength="8" type="text" id="Postcode" name="Postcode" value="" autocomplete="off">
                 </div>
               </div>
-            </div>
-            <!-- <div class="govuk-radios__divider">or</div>
-
-            <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="selected-organisation-id" name="selected-organisation-id" type="radio"
-                value="nationwide" data-aria-controls="nationwide-conditional">
-              <label class="govuk-label govuk-radios__label" for="selected-organisation-id">
-                The apprenticeship is in different locations across England
-                <span class="govuk-hint">For example, if the applicant has a choice of location</span>
-              </label>
-            </div>
-            <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="nationwide-conditional">
-              <ul class="govuk-list govuk-list--bullet">
-                <li>No map will be displayed on the vacancy</li>
-                <li>Your vacancy will only show when a candidate selects "vacancies across England".</li>
-              </ul>
-
-            </div> -->
-          </div>
+            </div>          
+          </div>      
         </fieldset>
       </div>
+
       {% if data.edit != "yes"%}
       <input type="submit" class="govuk-button" name="continueButton" value="Save and continue" />
 <br /><br />
