--- a/app/views/v6/employer/create/address-list.html
+++ b/app/views/v6/employer/create/address-list.html
@@ -15,7 +15,7 @@ Where will the apprentices work? - Your apprenticeship adverts - {{serviceName}}
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
     <h1 class="govuk-heading-xl">
-      Your addresses
+      Addresses
     </h1>
 
     <table class="govuk-table responsive-table">
