--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -436,6 +436,30 @@ $govuk-assets-path: '/govuk/assets/';
     background-color: #267daf;
   }
   
+
+// autocomplete
+.autocomplete__wrapper{position:relative}.autocomplete__hint,.autocomplete__input{-webkit-appearance:none;border:2px solid #0b0c0c;border-radius:0;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;margin-bottom:0;width:100%}.autocomplete__input{background-color:transparent;position:relative}.autocomplete__hint{color:#b1b4b6;position:absolute}.autocomplete__input--default{padding:5px}.autocomplete__input--focused{outline:3px solid #fd0;outline-offset:0;box-shadow:inset 0 0 0 2px}.autocomplete__input--show-all-values{padding:5px 34px 5px 5px;cursor:pointer}.autocomplete__dropdown-arrow-down{z-index:-1;display:inline-block;position:absolute;right:8px;width:24px;height:24px;top:10px}.autocomplete__menu{background-color:#fff;border:2px solid #0b0c0c;border-top:0;color:#0b0c0c;margin:0;max-height:342px;overflow-x:hidden;padding:0;width:100%;width:calc(100% - 4px)}.autocomplete__menu--visible{display:block}.autocomplete__menu--hidden{display:none}.autocomplete__menu--overlay{box-shadow:rgba(0,0,0,.256863) 0 2px 6px;left:0;position:absolute;top:100%;z-index:100}.autocomplete__menu--inline{position:relative}.autocomplete__option{border-bottom:solid #b1b4b6;border-width:1px 0;cursor:pointer;display:block;position:relative}.autocomplete__option>*{pointer-events:none}.autocomplete__option:first-of-type{border-top-width:0}.autocomplete__option:last-of-type{border-bottom-width:0}.autocomplete__option--odd{background-color:#fafafa}.autocomplete__option--focused,.autocomplete__option:hover{background-color:#1d70b8;border-color:#1d70b8;color:#fff;outline:0}.autocomplete__option--no-results{background-color:#fafafa;color:#646b6f;cursor:not-allowed}.autocomplete__hint,.autocomplete__input,.autocomplete__option{font-size:16px;line-height:1.25}.autocomplete__hint,.autocomplete__option{padding:5px}@media (min-width:641px){.autocomplete__hint,.autocomplete__input,.autocomplete__option{font-size:19px;line-height:1.31579}}
+
+.autocomplete__wrapper * {
+    @include govuk-typography-common();
+}
+
+.govuk-details__text {
+    width: 160%;
+}
+.no-button{padding:0px;margin:0px;background-color:none;border:none;cursor: pointer}
+.govuk-input__suffix{color:#1d70b8;background-color:#1d70b8;cursor: pointer;}
+.sort {
+  display: inline-block;
+  padding-left: 1.25em;
+  margin: 0 0 0em 0;
+  background: url(../images/sort-blue.svg) no-repeat 0% 15%;
+  background-size: 0.65em;
+  text-decoration: underline;
+  color: #1d70b8;
+}
+
+  
   .govuk-component__link {
     @include govuk-link-common;
     @include govuk-link-style-no-visited-state;
