--- a/app/views/v6/employer/create/add-address1.html
+++ b/app/views/v6/employer/create/add-address1.html
@@ -65,6 +65,17 @@ Where will the apprentices work? - Your apprenticeship adverts - {{serviceName}}
     "15 Thorne House, Townsend Avenue, Coventry, CV1 1AB",
     "16 Thorne House, Townsend Avenue, Coventry, CV1 1AB",
     "17 Thorne House, Townsend Avenue, Coventry, CV1 1AB",
+    "10 Dunkeld Road, Perth, PH1 5TW",
+    "46 Gillingham Street, Pimlico, London, SW1V 1HU",
+    "Stagecoach Midlands, Main Road, Far Cotton, Northampton, NN4 8ES",
+    "Gillmoss Bus Depot, East Lancashire Road, Liverpool, L11 0BB",
+    "West Ham Garage, Stephenson Street, London, E16 4SA",
+    "Stagecoach West, 3rd Floor, 65 London Rd, Gloucester, GL1 3F",
+    "County Ground Edgbaston Road, Birmingham, B5 7QU",
+    "104 Victoria Centre, Nottingham, NG1 3",
+    "Building 8 East Midlands Airport Castle Donnington, Derby, DE74 2SA",
+    "Aerial House, 69 City Rd, Newcastle Upon Tyne, NE1 2",
+    "Crown Square, Manchester, M60 1PR",
   ]
 </script>
 
