--- a/app/views/v6/employer/create/address-list.html
+++ b/app/views/v6/employer/create/address-list.html
@@ -23,11 +23,11 @@ Where will the apprentices work? - Your apprenticeship adverts - {{serviceName}}
       
         {% if data['mainaddress'] =="yes" %}
         <tr class="govuk-table__row" role="row">
-          <td class="govuk-table__cell govuk-!-width-one-half" role="gridcell"><span class="table-heading" aria-hidden="true">Address</span>Cheylesmore House, 5 Quinton Road, Coventry, CV1 2WT</td>
+          <td class="govuk-table__cell govuk-!-width-one-half" role="gridcell"><span class="table-heading" aria-hidden="true">Address</span>10 Dunkeld Road, Perth, PH1 5TW</td>
 
           <td class="govuk-table__cell" role="gridcell">{% if data['addresspositions'] %} {{ data['addresspositions'] }} {% else %}2 {% endif %} positions</td>
 
-          <td class="govuk-table__cell" role="gridcell" style="text-align:right"><a href="#" class="govuk-link--no-visited-state">Remove</a>&nbsp;&nbsp;&nbsp;<a class="govuk-link--no-visited-state" href="#">Edit</a></td>
+          <td class="govuk-table__cell" role="gridcell" style="text-align:right"><a href="#" class="govuk-link--no-visited-state js-remove" onClick="test()">Remove</a>&nbsp;&nbsp;&nbsp;<a class="govuk-link--no-visited-state" href="#">Edit</a></td>
         </tr>
         {% endif %}
 
@@ -37,7 +37,7 @@ Where will the apprentices work? - Your apprenticeship adverts - {{serviceName}}
 
           <td class="govuk-table__cell" role="gridcell">{% if data['addresspositions1'] %} {{ data['addresspositions1'] }} {% else %}3 {% endif %} positions</td>
 
-          <td class="govuk-table__cell" role="gridcell" style="text-align:right"><a href="#" class="govuk-link--no-visited-state">Remove</a>&nbsp;&nbsp;&nbsp;<a class="govuk-link--no-visited-state" href="#">Edit</a></td>
+          <td class="govuk-table__cell" role="gridcell" style="text-align:right"><a href="#" class="govuk-link--no-visited-state js-remove">Remove</a>&nbsp;&nbsp;&nbsp;<a class="govuk-link--no-visited-state" href="#">Edit</a></td>
         </tr>
         {% endif %}
 
@@ -47,7 +47,7 @@ Where will the apprentices work? - Your apprenticeship adverts - {{serviceName}}
 
           <td class="govuk-table__cell" role="gridcell">{% if data['addresspositions2'] %} {{ data['addresspositions2'] }} {% else %}1 {% endif %} positions</td>
 
-          <td class="govuk-table__cell" role="gridcell" style="text-align:right"><a href="#" class="govuk-link--no-visited-state">Remove</a>&nbsp;&nbsp;&nbsp;<a class="govuk-link--no-visited-state" href="#">Edit</a></td>
+          <td class="govuk-table__cell" role="gridcell" style="text-align:right"><a href="#" class="govuk-link--no-visited-state js-remove">Remove</a>&nbsp;&nbsp;&nbsp;<a class="govuk-link--no-visited-state" href="#">Edit</a></td>
         </tr>
         {% endif %}
   
@@ -73,5 +73,18 @@ Where will the apprentices work? - Your apprenticeship adverts - {{serviceName}}
 
   </div>
 </div>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script type="text/javascript">
+
+
+$(function() {
+    $(".js-remove").click(function(){
+      $(this).parents('tr').fadeOut();
+    });
+});
+
+
+</script>
 
 {% endblock %}
