--- a/app/views/v6/employer/create/long-description.html
+++ b/app/views/v6/employer/create/long-description.html
@@ -49,7 +49,7 @@ Description of the vacancy - Your apprenticeship adverts - {{serviceName}} - GOV
             <label class="govuk-label govuk-!-font-weight-bold" for="VacancyDescription">
               What will the apprentice be doing?
             </label>
-            <span class="govuk-hint">Describe what an average day or week will be like and what takes the apprentice could be doing.</span>
+            <span class="govuk-hint">Describe what an average day or week will be like and what tasks the apprentice could be doing.</span>
             {% if 'VacancyDescription' in data.errorType %}
             <span id="VacancyDescription-error" class="govuk-error-message">
               <span class="govuk-visually-hidden">Error:</span> What the apprentice will be doing must not contain a banned word or phrase
