--- a/app/views/v6/employer/create/main-address.html
+++ b/app/views/v6/employer/create/main-address.html
@@ -23,7 +23,7 @@ Where will the apprentices work? - Your apprenticeship adverts - {{serviceName}}
               Will the apprentice(s) work at your main address?
             </h1>
           </legend>
-          <p class="govuk-body">Your organisation’s main address is <strong>10 Dunkeld Road, Perth, PH1 5TW</strong></p>
+          <p class="govuk-body">Your organisation’s main address is <strong>46 Gillingham Street, Pimlico, London, SW1V 1HU</strong></p>
           <div class="govuk-radios" data-module="govuk-radios">
             <div class="govuk-radios__item">
               <input class="govuk-radios__input" id="address-yes" name="mainaddress" type="radio" value="yes" data-aria-controls="conditional-contact">
